--- a/index.html
+++ b/index.html
@@ -7,18 +7,16 @@
     <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
-    <header>
-      <div>
-        <h1>Lista de Compras</h1>
-        <h5>Clique nos grupos e escolha os itens da sua lista de compras</h5>
-      </div>
-    </header>
-
-    <main>
-      <aside>
+    <div class="container">
+      <aside class="sidebar">
         <div class="input-container">
-          <input type="text" placeholder="Nova categoria" class="input-hint" />
-          <button class="btn-add">
+          <input
+            type="text"
+            placeholder="Nova categoria"
+            class="input-hint"
+            id="ipCategorie"
+          />
+          <button class="btn-add" id="btnNewCategorie">
             <img
               src="C:\Users\srdav\Estudo_Programacao\ADS\4FASE\Full_Stack\Trabalho_01\assets\btn_add_categoria.png"
               alt="Adicionar categoria"
@@ -26,35 +24,11 @@
             />
           </button>
         </div>
-        <div class="side-menu">
-          <!-- <ul>
-            <li>Coffee</li>
-            <li>Tea</li>
-            <li>Milk</li>
-          </ul> -->
-          <table id="category-table">
-            <thead>
-              <tr>
-                <th>Categorias</th>
-              </tr>
-            </thead>
-            <tbody>
-              <!-- Categorias serão inseridas aqui pelo JS -->
-            </tbody>
-          </table>
-        </div>
-      </aside>
-
-      <section class="main-list">
-        <ul>
-          <li>Coffee</li>
-          <li>Tea</li>
-          <li>Milk</li>
+        <ul class="category-list" id="category-list">
+          <li>Alimentos</li>
         </ul>
-      </section>
-    </main>
-
-    <footer></footer>
+      </aside>
+    </div>
     <script src="js/script.js"></script>
   </body>
 </html>
