:recycle: Tentativa de correção da imagem que bugou ao adicionar git pages

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
           />
           <button class="btn-add" id="btnNewCategorie">
             <img
-              src="C:\Users\srdav\Estudo_Programacao\ADS\4FASE\Full_Stack\Trabalho_01\assets\btn_add_categoria.png"
+              src="https://github.com/DjonathanDAvila/supermarket-list-ads/blob/main/assets/btn_add_categoria.png.png"
               alt="Adicionar categoria"
               class="icon-add"
             />
