:recycle: Tentativa de correção de rota imagem "add categoria". Havia bugado no git pages

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
           />
           <button class="btn-add" id="btnNewCategorie">
             <img
-              src="https://github.com/DjonathanDAvila/supermarket-list-ads/blob/main/assets/btn_add_categoria.png.png"
+              src="assets\btn_add_categoria.png"
               alt="Adicionar categoria"
               class="icon-add"
             />
