:sparkles: Adicionado lista de itens...

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
             class="input-hint"
             id="ipCategorie"
           />
+
           <button class="btn-add" id="btnNewCategorie">
             <img
               src="assets\btn_add_categoria.png"
@@ -24,10 +25,68 @@
             />
           </button>
         </div>
+
         <ul class="category-list" id="category-list">
           <li>Alimentos</li>
         </ul>
       </aside>
+
+      <main class="content">
+        <header class="header">
+          <h1>Lista de Compras</h1>
+          <p>Clique nos grupos e escolha os itens da sua lista de compras</p>
+        </header>
+
+        <section class="item-list">
+          <div class="item-list-header">
+            <h2>Alimentos</h2>
+            <button class="add-item">+</button>
+          </div>
+
+          <ul>
+            <li>
+              <div class="icon">A</div>
+              <span>List item</span>
+              <div class="actions">
+                <button class="delete">🗑️</button>
+                <input type="checkbox" />
+              </div>
+            </li>
+            <li>
+              <div class="icon">A</div>
+              <span>List item</span>
+              <div class="actions">
+                <button class="delete">🗑️</button>
+                <input type="checkbox" />
+              </div>
+            </li>
+            <li>
+              <div class="icon">A</div>
+              <span>List item</span>
+              <div class="actions">
+                <button class="delete">🗑️</button>
+                <input type="checkbox" />
+              </div>
+            </li>
+            <li>
+              <div class="icon">A</div>
+              <span>List item</span>
+              <div class="actions">
+                <button class="delete">🗑️</button>
+                <input type="checkbox" />
+              </div>
+            </li>
+            <li>
+              <div class="icon">A</div>
+              <span>List item</span>
+              <div class="actions">
+                <button class="delete">🗑️</button>
+                <input type="checkbox" />
+              </div>
+            </li>
+          </ul>
+        </section>
+      </main>
     </div>
     <script src="js/script.js"></script>
   </body>
