--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
           </button>
         </div>
 
-        <ul class="category-list" id="category-list">
-          <li>Alimentos</li>
+        <ul class="category-list" id="category-list">                   
+          <!-- <li>Alimentos</li> -->
         </ul>
       </aside>
 
@@ -39,53 +39,13 @@
 
         <section class="item-list">
           <div class="item-list-header">
-            <h2>Alimentos</h2>
-            <button class="add-item">+</button>
+              <h2>Itens</h2>
           </div>
 
-          <ul>
-            <li>
-              <div class="icon">A</div>
-              <span>List item</span>
-              <div class="actions">
-                <button class="delete">🗑️</button>
-                <input type="checkbox" />
-              </div>
-            </li>
-            <li>
-              <div class="icon">A</div>
-              <span>List item</span>
-              <div class="actions">
-                <button class="delete">🗑️</button>
-                <input type="checkbox" />
-              </div>
-            </li>
-            <li>
-              <div class="icon">A</div>
-              <span>List item</span>
-              <div class="actions">
-                <button class="delete">🗑️</button>
-                <input type="checkbox" />
-              </div>
-            </li>
-            <li>
-              <div class="icon">A</div>
-              <span>List item</span>
-              <div class="actions">
-                <button class="delete">🗑️</button>
-                <input type="checkbox" />
-              </div>
-            </li>
-            <li>
-              <div class="icon">A</div>
-              <span>List item</span>
-              <div class="actions">
-                <button class="delete">🗑️</button>
-                <input type="checkbox" />
-              </div>
-            </li>
+          <ul class="item-list" id="item-list">
+            <!-- Itens serão renderizados aqui -->
           </ul>
-        </section>
+      </section>
       </main>
     </div>
     <script src="js/script.js"></script>
