--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
         </section>
       </main>
     </div>
+    <button class="add-item disabled" id="btnNewItem" disabled>+</button>
     <script src="js/script.js"></script>
   </body>
 </html>
